--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ button:hover{
 font-family: 'Belleza';
 font-size:xx-large;
 }
-.card-body{
+.card-text{
 font-family: 'Biryani'
 }
 
